Start/Stop data collection from GUI

--- a/electron/resources/menu.html
+++ b/electron/resources/menu.html
@@ -40,7 +40,6 @@
         </button>
 </div>
 
-
 <div id="heart-rate">
     <div class="ui small inverted statistics">
         <div class="ui tiny statistic">
@@ -67,6 +66,19 @@
         </div>
     </div>
 </div> 
+
+<div id="start">
+        <button class="circular inverted green ui icon button" id="settingsBtn">
+                <i class="icon clipboard check"></i>
+        </button>
+</div>
+
+<div id="stop">
+        <button class="circular inverted red ui icon button" id="settingsBtn">
+                <i class="icon ban"></i>
+        </button>
+</div>
+
 
 <script src="menu.js"></script>
 </html>
