Integrated Peak Detection

--- a/electron/resources/menu.html
+++ b/electron/resources/menu.html
@@ -44,7 +44,7 @@
     <div id="heart-rate">
         <div class="ui small inverted statistics">
             <div class="ui tiny statistic">
-                <div class="value">
+                <div class="value" id="heartRateDisplay">
                 <i class="inverted grey heartbeat icon"></i>
                 --
                 </div>
